<resources>
    <string name="app_name">Stock Hawk</string>

    <string name="action_settings" translatable="true">Settings</string>
    <string name="action_change_units" translatable="true">Change Units</string>
    <string name="symbol_search" translatable="true">Symbol Search</string>
    <string name="content_test" translatable="true">Search for a Stock Symbol</string>
    <string name="input_hint" translatable="false">FB</string>
    <string name="input_prefill"/>
    <string name="widget_title" translatable="true">Today\'s Market</string>
    <string name="network_toast" translatable="true">Uh-oh! This app requires an internet connection</string>
    <string name="invalid_symbol" translatable="true">Invalid Symbol</string>
    <string name="open" translatable="true">Open</string>
    <string name="previous_close" translatable="true">Prev. close</string>
    <string name="day_low" translatable="true">Day low</string>
    <string name="year_low" translatable="true">Year low</string>
    <string name="day_high" translatable="true">Day high</string>
    <string name="year_high" translatable="true">Year high</string>
    <string name="add_stock" translatable="true">Add a stock</string>
    <string name="empty_message" translatable="true">Stock list is empty. Please add some</string>
    <string name="out_of_data" translatable="true">The data is out-of-date</string>


</resources>
